2003-05-13  Jody Goldberg <jody@gnome.org>

	* widget-charmap-selector.c (cs_class_init) : support being a mnemonic
	  target.  Remove pointless destroy method.
	(cs_mnemonic_activate) : new.

2003-05-12  Morten Welinder  <terra@gnome.org>

	* gnumeric-optionmenu.c (connect_menu_signals): Plug leak.

2003-05-11  Jody Goldberg <jody@gnome.org>

	* Release 1.1.17

2003-05-09  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* gnumeric-optionmenu.c (option_menu_init): initialize 
	  last_signaled_menu_item
	(gnumeric_option_menu_changed): check and uncheck items
	(gnumeric_option_menu_show_all): show more
	* gnumeric-optionmenu.h (last_signaled_menu_item): new
	  field in teh option menu
	* widget-charmap-selector.c: use check_menu_item rather 
	  than just menu_item

2003-05-08  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* Makefile.am: added src/widgets/gnumeric-optionmenu.[ch]
	* gnumeric-optionmenu.c: new (based on gtkoptionmenu)
	* gnumeric-optionmenu.h: new (based on gtkoptionmenu)
	* widget-charmap-selector.c: rewritten

2003-05-05  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* widget-charmap-selector.c: new (objectified charset.c)
	* widget-charmap-selector.h: new (objectified charset.h)
	* Makefile.am: added widget-charmap-selector.[ch]

2003-04-23  Jody Goldberg <jody@gnome.org>

	* gnumeric-expr-entry.c (gee_class_init) : add wbcg property.
	(gee_set_property) : ditto.
	(gee_get_property) : ditto.
	(gnm_expr_entry_set_scg) : don't clear the wbcg.

2003-04-23  Jody Goldberg <jody@gnome.org>

	* gnumeric-expr-entry.c (cb_entry_activate) : patch warning.

2003-04-22  Jody Goldberg <jody@gnome.org>

	* gnumeric-expr-entry.c (cb_entry_activate) : queue an update.
	(gnm_expr_entry_signal_update) : queue the updates in an idle handler
	  so that we can get some rudimentary motion compression for keyboard
	  edits.

2003-04-22  Jody Goldberg <jody@gnome.org>

	* gnumeric-expr-entry.c : Tidy up the namespacing.